[gd_scene load_steps=4 format=3 uid="uid://baph16fqb1sye"]

[ext_resource type="Script" uid="uid://d3m4t7fwo2xcp" path="res://scripts/goal.gd" id="1_sx1j4"]
[ext_resource type="Texture2D" uid="uid://cxn0k05mgd62y" path="res://assets/SciAssets/SciSpriteSheet.png" id="2_w3gav"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kvuet"]
size = Vector2(10, 10)

[node name="Goal" type="Node2D" groups=["Goal"]]
script = ExtResource("1_sx1j4")

[node name="GoalArea" type="Area2D" parent="."]
collision_layer = 0

[node name="GoalColl" type="CollisionShape2D" parent="GoalArea"]
shape = SubResource("RectangleShape2D_kvuet")

[node name="GoalSprite" type="Sprite2D" parent="GoalArea"]
modulate = Color(0.567164, 1, 0.898838, 1)
self_modulate = Color(0, 1, 0.768627, 1)
show_behind_parent = true
texture = ExtResource("2_w3gav")
region_enabled = true
region_rect = Rect2(80, 32, 16, 16)

[connection signal="area_entered" from="GoalArea" to="." method="_on_goal_area_area_entered"]
